# lota-launcher

./: .gitignore  Cargo.toml  LICENSE  README.md  backend.py  build_binaries.bat  build_binaries.sh  checklist.txt  desktop_integration.py  dev.sh  installer.py  launcher.py  lota-launcher.desktop  requirements.txt  setup.sh  updater.py
$tmp/runtime/: lota-launcher.desktop
.github/workflows/: appimage-build.yml  macos-build.yml  python-check.yml  windows-build.yml
app/: package-lock.json  package.json
app/src/: App.css  App.tsx
app/src-tauri/: .gitignore  Cargo.toml  installer-hooks.nsh  tauri.conf.json  tauri.windows.conf.json
auth/: api_base.py  auth_ctorage.py  auth_service.py  auth_storage.py  java_finder.py  settings.py
devtools/: ui_layout_editor.py
minecraft/: __init__.py  mc_client.py  mc_launch.py
packaging/: build-appimage.sh  download-linux.sh
packaging/windows/: installer_version_info.txt  launcher_version_info.txt  updater_version_info.txt
services/: __init__.py  account_service.py  friends_service.py  library_service.py  login_service.py  news_service.py  play_service.py  settings_service.py
src/: lib.rs
updater/src-tauri/: Cargo.toml  tauri.conf.json
updater/src-tauri/capabilities/: default.json
updater/src-tauri/icons/: icon.icns
updater/src-tauri/src/: main.rs
window/: account_window.py  chrome.py  friends_window.py  i18n.py  library_window.py  main_window.py  settings_window.py  skin_render.py  style.py  translations.py  ui_layout.py  ui_layout_defaults.json
window/controllers/: __init__.py  account_controller.py  (+5 more)
(+45 files in other folders)
