[package]
name = "updater"
version = "0.1.0"
description = "Lota Launcher Updater"
authors = []
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
sha2 = "0.10"

[profile.release]
strip = true
opt-level = 3
